--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
+    "outDir": "build",
     "rootDir": "src",
-    "outDir": "dist",
-    "strict": true,
+    "module": "commonjs",
+    "target": "ES2020",
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,
+    "strict": true,
+
     "typeRoots": [
       "./src/types",
       "./node_modules/@types"
