--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
-    "migrate": "npm run build && node-pg-migrate up -m build/migrations",
-    "migrate:down": "npm run build && node-pg-migrate down -m build/migrations",
-    "migrate:create": "node-pg-migrate create -m src/migrations -j ts",
+    "migrate": "NODE_ENV=production node-pg-migrate up",
+    "migrate:down": "NODE_ENV=production node-pg-migrate down",
+    "migrate:create": "node-pg-migrate create -j ts",
     "test": "NODE_ENV=test jest --runInBand"
   },
   "keywords": [],
@@ -26,6 +26,7 @@
     "node-pg-migrate": "^8.0.3",
     "pg": "^8.16.3",
     "sanitize-html": "^2.17.0",
+    "typescript": "^5.9.2",
     "zod": "^4.0.14"
   },
   "devDependencies": {
@@ -42,7 +43,6 @@
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.2"
+    "ts-node-dev": "^2.0.0"
   }
 }
