Fix: Deployment errors fixed

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,22 +1,23 @@
-# Stage 1: Build Stage
-FROM node:18-alpine AS builder
+# Stage 1: Builder
+FROM node:18 AS builder
 WORKDIR /app
-
-COPY package*.json tsconfig.json ./
-RUN npm install
-
-COPY src ./src
-RUN npm run build
-
-# Stage 2: Production Stage
-FROM node:18-alpine
-WORKDIR /app
-
 COPY package*.json ./
-RUN npm install --only=production && npm install node-pg-migrate
+RUN npm install
+COPY tsconfig.json ./
+COPY src ./src
+COPY pg-migrate-config.js ./
+RUN npm run build  # compiles to /app/build
 
+# Stage 2: Production
+FROM node:18 AS runner
+WORKDIR /app
+COPY package*.json ./
+RUN npm install --only=production
+
+# Copy compiled files
 COPY --from=builder /app/build ./build
+# Ensure migrations are copied
+COPY --from=builder /app/build/migrations ./build/migrations
 COPY pg-migrate-config.js ./
 
-EXPOSE 3000
-CMD ["sh", "-c", "npm run migrate && node dist/index.js"]
+CMD ["npm", "run", "start"]
