--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
+    "start": "node build/server.js",
     "migrate": "NODE_ENV=production node-pg-migrate up",
     "migrate:down": "NODE_ENV=production node-pg-migrate down",
     "migrate:create": "node-pg-migrate create -j ts",
